force-app/main/default/objects/Engagement__c/Engagement__c.object-meta.xml
<CustomObject>
    <label>Engagement</label>
    <nameField>
        <displayFormat>ENG-{0000000000}</displayFormat>
        <label>Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>