force-app/main/default/objects/Engagement__c/fields/Coordinating_Office__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinating Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements (Coordinating Office)</relationshipLabel>
    <relationshipName>Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>