force-app/main/default/objects/Engagement__c/fields/Engagement_ID__c.field-meta.xml
<CustomField>
    <fullName>Engagement_ID__c</fullName>
    <externalId>true</externalId>
    <label>Engagement ID</label>
    <type>AutoNumber</type>
</CustomField>