force-app/main/default/objects/Engagement__c/fields/Engagement_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name_Formula__c</fullName>
    <formula>Client__r.Name</formula>
    <label>Engagement Name Formula</label>
    <type>Text</type>
</CustomField>