force-app/main/default/objects/Engagement__c/fields/Engagement_Name_Tag__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Name_Tag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Engagement Name Tag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>