force-app/main/default/objects/Engagement__c/fields/Is_Subscribable__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscribable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Subscribable</label>
    <type>Checkbox</type>
</CustomField>