force-app/main/default/objects/Engagement__c/fields/MSA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSA Effective Date</label>
    <type>Date</type>
</CustomField>