force-app/main/default/objects/Engagement__c/fields/MSA_Sent__c.field-meta.xml
<CustomField>
    <fullName>MSA_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSA Sent</label>
    <type>Date</type>
</CustomField>