force-app/main/default/objects/Engagement__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(
  ISBLANK(Display_Name__c),
  &quot;&quot;,
  HYPERLINK(
    LEFT($Api.Partner_Server_URL_260, FIND(&quot;/services&quot;, $Api.Partner_Server_URL_260)) 
      &amp; &quot;/&quot; &amp; Id,
    Display_Name__c,
    &quot;_self&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>