force-app/main/default/objects/Engagement__c/listViews/Client_Portal_All.listView-meta.xml
<ListView>
    <fullName>Client_Portal_All</fullName>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Engagements</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>